# VoteBot

./: Dockerfile  Jenkinsfile  README.md  about  checks.yaml  docker-compose.production.yaml  docker-compose.tests.yaml  docker-compose.yaml  manage.py  pw_reminder  pyproject.toml  requirements.txt
bot_app/: adapter_slackclient.py  admin.py  apps.py  client.py  events.py  forms.py  hmac.py  interactive.py  message.py  messages.py  modals.py  models.py  reminders.py  scrap_users.py  slash.py  texts.py  urls.py  utils.py
bot_app/migrations/: 0001_initial.py  0002_vote_comment.py
bot_app/modals/: get_comments.py  vote.py
bot_app/scheduler/: jobs.py  scheduler.py
bot_app/slack/: client.py  events.py
bot_app/texts/: about  got_voted  greeting  no_permissions  points_in_category  remind_about_program  top5_header  top5_line  user_comments  winners_draw  winners_header  winners_line  you_have_not_voted  your_points  your_votes  your_votes_header
bot_app/views/: events.py  index.py  interactive.py  slash.py
bot_project/: asgi.py  settings.py  urls.py  wsgi.py
jenkins/: votebot.jenkins
nginx/: Dockerfile  nginx.conf
requirements/: dev.txt  prod.txt
tests/: base.py  data.py  test_scheduler.py  test_texts.py
tests/endpoints/: test_events.py  test_interactive.py  test_method.py  test_slash.py
texts/: about  announce_winners  got_voted  you_have_not_voted
